--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he">
 <head>
   <meta charset="UTF-8">
-  <title>מבחן עברית - חיות</title>
+  <title>Ivrit test</title>
   <style>
     body {
       font-family: sans-serif;
