--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     function nextQuestion() {
       questionCount++;
-      const options = [...colors].sort(() => 0.5 - Math.random()).slice(0, 3);
+      const options = [...colors];
       const answer = options[Math.floor(Math.random() * options.length)];
       correctWord = answer.word;
       setTimeout(() => speak(correctWord), 500);
