--- a/index.html
+++ b/index.html
@@ -87,6 +87,46 @@
   <script>
     const stages = [
       {
+        name: 'מספרים',
+        items: [
+          { word: 'אחד', type: 'icon', value: '1' },
+          { word: 'שתיים', type: 'icon', value: '2' },
+          { word: 'שלוש', type: 'icon', value: '3' },
+          { word: 'ארבע', type: 'icon', value: '4' },
+          { word: 'חמש', type: 'icon', value: '5' }
+        ]
+      },
+      {
+        name: 'צבעים',
+        items: [
+          { word: 'אדום', type: 'color', value: 'red' },
+          { word: 'כחול', type: 'color', value: 'blue' },
+          { word: 'ירוק', type: 'color', value: 'green' },
+          { word: 'צהוב', type: 'color', value: 'yellow' },
+          { word: 'סגול', type: 'color', value: 'purple' }
+        ]
+      },
+      {
+        name: 'חיות',
+        items: [
+          { word: 'חתול', type: 'icon', value: '🐱' },
+          { word: 'כלב', type: 'icon', value: '🐶' },
+          { word: 'פרה', type: 'icon', value: '🐮' },
+          { word: 'כבשה', type: 'icon', value: '🐑' },
+          { word: 'תרנגול', type: 'icon', value: '🐔' }
+        ]
+      },
+      {
+        name: 'אוכל',
+        items: [
+          { word: 'תפוח', type: 'icon', value: '🍎' },
+          { word: 'בננה', type: 'icon', value: '🍌' },
+          { word: 'עוגה', type: 'icon', value: '🍰' },
+          { word: 'לחם', type: 'icon', value: '🍞' },
+          { word: 'גלידה', type: 'icon', value: '🍦' }
+        ]
+      },
+      {
         name: 'צבעים',
         items: [
           { word: 'אדום', type: 'color', value: 'red' },
